Fix several minor issues
-   If the tree is too large, we add a scrollbar.

-   Previously, it the track is paused and we switch tracks, it would
    not notice that the track changed.

    This isn't a bug in my code, but I was able to work around it with
    'setTimeout(/* ... */, 0)'.

-   It is now possible to use the favorite button.

At this point, the application is mostly usable, I should start testing
it.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,9 +9,11 @@ body {
     height: 100%;
 }
 
-.c-Index .c-ArtistTree {
+.c-Index .artist-tree-container {
     grid-column: 1;
     grid-row: 1;
+
+    overflow-y: scroll;
 }
 
 .c-Index .c-ArtistDetails {
